// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Kbd > renders correctly with as 1`] = `
<div>
  <span
    class="inline-flex items-center justify-center rounded-sm bg-default px-1 font-sans font-medium text-default ring ring-accented ring-inset h-5 min-w-5 text-[11px]"
  >
    K
  </span>
</div>
`;

exports[`Kbd > renders correctly with class 1`] = `
<div>
  <kbd
    class="inline-flex items-center justify-center rounded-sm bg-default px-1 font-sans text-default ring ring-accented ring-inset h-5 min-w-5 text-[11px] font-bold"
  >
    K
  </kbd>
</div>
`;

exports[`Kbd > renders correctly with size lg 1`] = `
<div>
  <kbd
    class="inline-flex items-center justify-center rounded-sm bg-default px-1 font-sans font-medium text-default ring ring-accented ring-inset h-6 min-w-6 text-[12px]"
  >
    K
  </kbd>
</div>
`;

exports[`Kbd > renders correctly with size md 1`] = `
<div>
  <kbd
    class="inline-flex items-center justify-center rounded-sm bg-default px-1 font-sans font-medium text-default ring ring-accented ring-inset h-5 min-w-5 text-[11px]"
  >
    K
  </kbd>
</div>
`;

exports[`Kbd > renders correctly with size sm 1`] = `
<div>
  <kbd
    class="inline-flex items-center justify-center rounded-sm bg-default px-1 font-sans font-medium text-default ring ring-accented ring-inset h-4 min-w-4 text-[10px]"
  >
    K
  </kbd>
</div>
`;

exports[`Kbd > renders correctly with value 1`] = `
<div>
  <kbd
    class="inline-flex items-center justify-center rounded-sm bg-default px-1 font-sans font-medium text-default ring ring-accented ring-inset h-5 min-w-5 text-[11px]"
  >
    K
  </kbd>
</div>
`;
